# WeatherUnits

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
docs/change-logs/: 0.7.0.md
src/WeatherUnits/: __init__.py  _unit.py  airQuality.py  test.py  utils.py
src/WeatherUnits/_config/: __init__.py  si.ini  template.ini  us.ini
src/WeatherUnits/airQuality/: __init__.py
src/WeatherUnits/base/: Decorators.py  Measurement.py  ScalingMeasurement.py  SmartFloat.py  _Measurement.py  _ScalingMeasurement.py  _SmartFloat.py  __init__.py
src/WeatherUnits/config/: __init__.py  si.ini  template.ini  us.ini
src/WeatherUnits/defaults/: __init__.py
src/WeatherUnits/derived/: __init__.py  _density.py  _derived.py  _precipitation.py  _wind.py  density.py  derived.py  partsPer.py  precipitation.py  rate.py  speed.py  volume.py  wind.py
src/WeatherUnits/digital/: __init__.py
src/WeatherUnits/errors/: Conversion.py  Unit.py  __init__.py
src/WeatherUnits/heat/: __init__.py  _heat.py  _kelvin.py
src/WeatherUnits/length/: __init__.py  _length.py  imperial.py  length.py  metric.py
src/WeatherUnits/mass/: __init__.py  _mass.py  _metric.py  imperial.py  mass.py  metric.py
src/WeatherUnits/measurement/: __init__.py  decorators.py
src/WeatherUnits/others/: __init__.py  _concentration.py  _light.py  concentration.py  light.py  various.py
src/WeatherUnits/pressure/: __init__.py  _imperial.py  _pressure.py  imperial.py  metric.py  pressure.py
src/WeatherUnits/time/: _si.py  (+4 more)
tests/: test__celcius.py  test__heat.py  test_heat.py  test_length.py  test_temperature.py
(+13 files in other folders)
