[tool.poetry]
name = "WeatherUnits"
version = "0.6.3"
description = "Easy conversion for common weather units"
authors = ["noblecloud <git@noblecloud.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/noblecloud/WeatherUnits"
keywords = ["weather", "units", "temperature", "conversion", "converter"]
classifiers = [
	"Programming Language :: Python :: 3.9",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Development Status :: 4 - Beta",
	"Topic :: Utilities",
	"Topic :: Scientific/Engineering :: Atmospheric Science",
	"Topic :: Scientific/Engineering :: Physics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Libraries",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Education",
]
include = ["*.ini"]
packages = [
	{ include = "WeatherUnits", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/noblecloud/WeatherUnits/issues"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"